commit tree 474a0e46f19020079d204dcdd23abe9eaa3b905d

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Sleepy Lion"
+    title="Red Bull Give You Wings!"
+  />
+    <img
+    src="https://en.wikipedia.org/wiki/Milk#/media/File:Glass_of_Milk_(33657535532).jpg"
+    alt="Moo Moo's Milk"
+    itle="Milk It dose a body good!"
+  />
+    <img
+    src="https://www.istockphoto.com/photo/toy-monkeys-gm101579289-7108416"
+    alt="Three Monkeys"
+    title="Monkeys see Monkeys do!"
+  />
   </body>
 </html>
